--- a/style.css
+++ b/style.css
@@ -1,9 +1,8 @@
-
-body{
+body {
     background: #F3F5FC;
 }
 
-.logo{
+.logo {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -11,10 +10,9 @@ body{
     width: 120px;
     height: 48px;
     padding: 30px 0px 0px 60px
-    
 }
 
-.resolver{
+.resolver {
     display: inline-block;
     width: 69%;
     vertical-align: top;
@@ -22,12 +20,12 @@ body{
     box-sizing: border-box;
 }
 
-.ingreseTexto textarea{
+.ingreseTexto textarea {
     width: 400px;
     background: #F3F5FC;
 }
 
-textarea{
+textarea {
     color: #0A3871;
     font-family: 'Inter';
     font-style: normal;
@@ -38,7 +36,7 @@ textarea{
     resize: none;
 }
 
-.indicaciones{
+.indicaciones {
     width: 205px;
     height: 18px;
     font-family: 'Inter';
@@ -49,7 +47,8 @@ textarea{
     color: #495057;
     opacity: 0.8;
 }
-.btn{
+
+.btn {
     width: 220px;
     padding: 12px 0;
     font-family: 'Inter';
@@ -59,28 +58,29 @@ textarea{
     line-height: 19px;
     text-align: center;
     border-radius: 14px;
-    
-}
-
-.btn-azulOscuro{
-   background: #0A3871;
-   color: #D8DFE8;
 
 }
-.btn-azulOscuro:hover{
-    background:#495057;
+
+.btn-azulOscuro {
+    background: #0A3871;
+    color: #D8DFE8;
+
 }
 
-.btn-claro{
+.btn-azulOscuro:hover {
+    background: #495057;
+}
+
+.btn-claro {
     background: #D8DFE8;
     color: #0A3871;
 }
 
-.btn-claro:hover{
+.btn-claro:hover {
     background: rgb(81, 176, 178);
 }
 
-.respuesta{
+.respuesta {
     display: inline-block;
     width: 28%;
     height: 80%;
@@ -93,14 +93,14 @@ textarea{
     top: -70px;
 }
 
-.munheco{
-    width:85%; 
+.munheco {
+    width: 85%;
     vertical-align: top;
     margin: 0 1.5%;
     padding: 150px 0px 0px 30px;
 }
 
-.noEncontrado{
+.noEncontrado {
     width: 100%;
     padding: 1px 0;
     font-family: 'Inter';
@@ -115,7 +115,7 @@ textarea{
     resize: none;
 }
 
-.inserteCifrado{
+.inserteCifrado {
     width: 100%;
     font-family: 'Inter';
     font-style: normal;
@@ -126,14 +126,41 @@ textarea{
     color: #495057;
 }
 
-.btn-copiar{
+.btn-copiar {
     background: #D8DFE8;
     color: #0A3871;
     margin: 0 auto;
     position: relative;
     display: inherit;
 }
-.btn-copiar:hover{
+
+.btn-copiar:hover {
     background: rgb(81, 176, 178);
 
+}
+
+@media screen and (max-width:912px) {
+    .resolver{
+        width: 100%;
+        display: block;
+        padding: 0 5%;
+    }
+
+    .ingreseTexto {
+        padding: auto;
+    }
+    .ingreseTexto textarea{
+        width: 100%;
+    }
+    .respuesta{
+        width: 100%;
+        top: auto;
+    }
+    .btn{
+        width:auto;
+        padding:12px 27px;
+    }
+    .botones{
+        text-align: center;
+    }
 }
